--- a/web/assets/css/styledetcurso.css
+++ b/web/assets/css/styledetcurso.css
@@ -1,15 +1,14 @@
-
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
 
-.contbody{
+.contbody {
     position: relative;
     min-height: 100vh;
-    padding: 60px 80px 10px ;
+    padding: 60px 80px 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,17 +17,14 @@
     background-size: cover;
 }
 
-
-.contdetinfo{
-    
+.contdetinfo {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 150px;
-
+    margin-top: 100px;
 }
 
-.contdetinfo .continfo{
+.contdetinfo .continfo {
     width: 90%;
     display: flex;
     flex-direction: column;
@@ -36,40 +32,37 @@
 
 
 /*    Content box     */
-.contboxdet{
-    
+
+.contboxdet {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: -350px;
-    
 }
 
-.contboxinfo{
+.contboxinfo {
     width: 600px;
     height: 900px;
     background-color: white;
     display: flex;
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
-    box-shadow:  5px 15px 15px rgba(0, 0, 0, 0.2);
+    box-shadow: 5px 15px 15px rgba(0, 0, 0, 0.2);
 }
 
-.detbox{
+.detbox {
     width: 700px;
     height: 300px;
     text-align: center;
-    
-
 }
 
-.detbox img{
+.detbox img {
     width: 600px;
     height: 400px;
     margin-bottom: 50px;
 }
 
-.detbox a{
+.detbox a {
     text-decoration: none;
     padding: 14px;
     padding-left: 70px;
@@ -80,10 +73,9 @@
     border-radius: 30px;
     transition: all 300ms;
     font-size: 20px;
-    
 }
 
-.detbox input{
+.detbox input {
     text-decoration: none;
     padding: 14px;
     padding-left: 70px;
@@ -95,22 +87,21 @@
     transition: all 300ms;
     font-size: 20px;
     cursor: pointer;
-
 }
-.detbox input:hover{
+
+.detbox input:hover {
     background-color: #4F52D6;
     color: white;
     border: 2px solid #4F52D6;
 }
 
-.detbox a:hover{
+.detbox a:hover {
     background-color: #4F52D6;
     color: white;
     border: 2px solid #4F52D6;
-    
 }
 
-.detbox h1{
+.detbox h1 {
     margin-left: 30px;
     margin-top: 50px;
     font-size: 25px;
@@ -118,10 +109,9 @@
     color: #4F52D6;
     text-align: left;
     font-weight: 600;
-
 }
 
-.detbox p{
+.detbox p {
     font-weight: 400;
     color: #4F52D6;
     text-align: left;
@@ -131,113 +121,97 @@
 
 /*    Contentenido     */
 
-.detboxinfo {
-    
-    
-}
+.detboxinfo {}
 
-.detboxinfo h1{
+.detboxinfo h1 {
     text-align: left;
     font-weight: bold;
     font-size: 50px;
     color: #4F52D6;
 }
-.detboxinfo p{
-    
+
+.detboxinfo p {
     margin-top: 15px;
     text-align: left;
     font-weight: 350;
     font-size: 20px;
     color: #c0c0c0;
-
 }
 
-
-.detboxinfo2{
+.detboxinfo2 {
     margin: 20px;
 }
 
-.detboxinfo2 img{
+.detboxinfo2 img {
     width: 70px;
     height: 60px;
     border-radius: 50px;
     margin: 15px;
-    
 }
 
-.detboxinfo2 h1{
+.detboxinfo2 h1 {
     margin-left: 110px;
     margin-top: -70px;
     font-weight: 550;
     font-size: 20px;
     color: #4F52D6;
-    
 }
-.detboxinfo2 p{
+
+.detboxinfo2 p {
     margin-left: 110px;
     margin-top: -10px;
     color: #4F52D6;
-    
 }
 
-.detboxinfo3{
-    
-    
+.detboxinfo3 {
     border: 2px solid #4F52D6;
-    border-radius: 50px ;
+    border-radius: 50px;
     padding: 30px;
     margin: 20px;
-    
 }
 
-.detboxinfo3 h1{
-    
+.detboxinfo3 h1 {
     padding-top: 20px;
     padding-left: 30px;
     font-size: 20px;
     font-weight: 700;
     text-align: left;
     color: #4F52D6;
-
 }
 
-.detboxinfo3 p{
-    
+.detboxinfo3 p {
     padding-left: 30px;
     padding-right: 50px;
     font-size: 20px;
     font-weight: 200;
     text-align: left;
     color: #c0c0c0;
-
 }
 
-.detboxinfo4{
+.detboxinfo4 {
     padding-bottom: 40px;
-    
 }
 
-.detboxinfo4 h1{
+.detboxinfo4 h1 {
     text-align: left;
     font-weight: bold;
     font-size: 40px;
     color: #4F52D6;
     margin-top: 50px;
 }
-.detboxinfo4 p{
-    
+
+.detboxinfo4 p {
     margin-top: 15px;
     text-align: left;
     font-weight: 350;
     font-size: 20px;
     color: #c0c0c0;
-
 }
 
 
 /*   Temario    */
 
-.conttitudet h1{
+.conttitudet h1 {
     padding-left: 30px;
     margin-left: 110px;
     color: #4F52D6;
@@ -247,58 +221,52 @@
     text-align: left;
 }
 
-    
-.lineahoridet{
-        height: 1px;
-        background-color: aqua;
-        margin-left: 7%;
-        margin-right: 7%;
-    }
-    
-    
+.lineahoridet {
+    height: 1px;
+    background-color: aqua;
+    margin-left: 7%;
+    margin-right: 7%;
+}
+
 .accordion_outerdet {
-        padding: 10px 0;
-    }
-    
-.accordion_outerdet .containerdet{
-        margin: auto; 
-    }
-    
-.accordion_outerdet details{
-        width: 100%;
-        background: transparent;
-        cursor: pointer;
-        font-size: 16px;
-        color: #4F52D6;
-        font-size: 20px;
-        font-weight: 550;
-      
-    }
-    
- .accordion_outerdet .infodet{
-        margin: 10px;
-        width: 97%;
-        padding: 10px;
-        background: transparent;
-        margin-top: 10px;
-        cursor: auto;
-        text-align: left;
-        
-    
-    }
-    
-.accordion_outerdet .infodet p{
-        color: #acacac;
-        padding-right: 100px;
-        font-weight: 200;
-        font-size: 18px;
-    }    
+    padding: 10px 0;
+}
 
-.accordion_outerdet summary p{
-        text-align: right;
-        margin-top: -30px;
-        font-size: 20px;
-        font-weight: 600;
-        color: #4F52D6;
-    } 
+.accordion_outerdet .containerdet {
+    margin: auto;
+}
 
+.accordion_outerdet details {
+    width: 100%;
+    background: transparent;
+    cursor: pointer;
+    font-size: 16px;
+    color: #4F52D6;
+    font-size: 20px;
+    font-weight: 550;
+}
+
+.accordion_outerdet .infodet {
+    margin: 10px;
+    width: 97%;
+    padding: 10px;
+    background: transparent;
+    margin-top: 10px;
+    cursor: auto;
+    text-align: left;
+}
+
+.accordion_outerdet .infodet p {
+    color: #acacac;
+    padding-right: 100px;
+    font-weight: 200;
+    font-size: 18px;
+}
+
+.accordion_outerdet summary p {
+    text-align: right;
+    margin-top: -30px;
+    font-size: 20px;
+    font-weight: 600;
+    color: #4F52D6;
+}
