--- a/web/assets/css/home.css
+++ b/web/assets/css/home.css
@@ -259,19 +259,19 @@
   margin-right: 0px;
   margin-left: 0px;
 }
-.container-fluid .row .col-12 .section-title {
+.container .row .col-12 .section-title {
   color: #7c83fd;
   font-family: "Inter", sans-serif;
   margin: 1rem auto;
   text-transform: uppercase;
   text-align: center;
 }
-.container-fluid .row .col-12 .section-title h2 {
+.container .row .col-12 .section-title h2 {
   font-size: 36px;
   font-weight: bold;
   text-transform: uppercase;
 }
-.container-fluid .row .col-12 .section-title span {
+.container .row .col-12 .section-title span {
   color: #99ccff;
 }
 .container-fluid-brida .row .col-12 .card {
@@ -473,13 +473,15 @@
 }
 
 /* EMPRESAS */
-.container-bussines .line {
+.line {
   background: #99ccff;
   width: 154px;
   height: 6px;
   margin-bottom: 21px;
 }
-
+.container-bussines{
+  margin: 0 auto;
+}
 .container-bussines h2 {
   font-size: 36px;
   font-family: "Inter", sans-serif;
@@ -559,6 +561,12 @@
 .container-bussines .box-rotate.active {
   transform: rotateY(180deg);
 }
+
+
+
+
+
+
 .box-rotate {
   height: 100%;
   position: relative;
@@ -569,7 +577,7 @@
   background-color: #fff;
 }
 .box-rotate .front .box-image > img {
-  height: 100%;
+  width: 100%;
 }
 .box-rotate .back {
   width: 100%;
@@ -829,4 +837,84 @@
     margin-right: 0 !important;
     margin-bottom: 10px !important;
   }
+}
+
+/* EMPRESAS */
+.container-fluid-empresa .row .col-12 h2 {
+  font-size: 36px;
+  font-weight: bold;
+  color: #7c83fd;
+  font-family: "Inter", sans-serif;
+  margin: 1rem auto;
+  text-transform: uppercase;
+  /* text-align: center; */
+}
+.container-fluid-empresa .row .col-12 ul li{
+  line-height: 2rem;
+
+}
+.container-fluid-empresa .row .col-12 ul li i{
+  color: #99ccff;
+}
+.container-fluid-empresa .box-email > span {
+  /* font-family: Work Sans; */
+  font-size: 13px;
+}
+.container-fluid-empresa .box-email {
+  /* max-width: 100%; */
+  margin-top: 20px;
+  text-align: center;
+}
+.container-fluid-empresa .box-email input[type="email"] {
+  border: 1px solid #7c83fd;
+  box-sizing: border-box;
+  border-radius: 6px;
+  font-family: "inter", serif;
+  font-size: 16px;
+  text-align: center;
+  outline: none;
+  /* margin-right: 15px; */
+  width: 100%;
+  padding: 10px 0;
+  /* flex: 1; */
+}
+.container-fluid-empresa .box-email input[type="email"]::placeholder {
+  color: #cfd2ff;
+}
+.container-fluid-empresa .box-email button {
+  border: none;
+  background: #99ccff;
+  border-radius: 6px;
+  color: #fff;
+  font-family: "inter", serif;
+  font-size: 14px;
+  cursor: pointer;
+  width: 100%;
+  padding: 12px 0;
+  /* padding: 10px 50px; */
+  /* white-space: nowrap; */
+}
+.container-fluid-empresa .box-email button:hover {
+  filter: drop-shadow(0 0 3px #00000040);
+}
+.container-fluid-empresa .box-email .msg-error {
+  color: #eb5757;
+  font-size: small;
+  font-family: Work Sans;
+  display: none;
+}
+.container-fluid-empresa .box-email .msg-error.show {
+  display: block;
+}
+
+.container-fluid-empresa .box-rotate {
+  position: relative;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
+  transform: rotateY(0);
+  perspective: 1000px;
+}
+.container-fluid-empresa .box-rotate.active {
+  transform: rotateY(180deg);
 }
