cambios de jorge, Giancarlo

--- a/web/assets/css/agregarCategoria.css
+++ b/web/assets/css/agregarCategoria.css
@@ -1,6 +1,102 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
 *{
     padding: 0%;
     margin: 0%;
+}
+
+:root{
+  --orange:#4F52D6 ;
+}
+
+.container-contformulario{
+  font-family: 'Nunito', sans-serif;
+}
+
+.contformulario .row{
+  display: flex;
+  flex-wrap: wrap;
+  gap:1.5rem;
+  align-items: center;
+  margin: 0 1rem;
+}
+
+.contformulario .row .image{
+  flex:1 1 25rem;
+}
+
+.contformulario .row .image img{
+  width:100%;
+}
+
+.contformulario .row form{
+  flex:1 1 25rem;
+  padding:1rem;
+  margin: 10rem;
+  display: inline-block;
+  grid-template-columns:auto auto;
+  gap: 10px;
+}
+
+.contformulario .row form .inputBox{
+  padding:.5rem 0;
+}
+
+.contformulario .row form .boton1{
+  grid-column: 1 / 3;
+}
+
+.contformulario .row form .inputBox input, select, textarea{
+  font-family: 'Nunito', sans-serif;
+  width:90%;
+  padding:.5rem;
+  border:.1rem solid rgba(0,0,0,.1);
+  font-size: 1rem;
+  color:#333;
+  text-transform: none;
+}
+
+.contformulario .row form .inputBox input:focus , select:focus, textarea:focus{
+  border-color: #8494f4  ;
+  outline: 0 none;
+  box-shadow: 0 1px 1px rgba(229, 103, 23, 0.075)inset, 0 0 8px rgba(55, 0, 255, 0.6);
+}
+
+.contformulario .row form .inputBox h3{
+  font-size: 1em;
+  color:#333;
+  margin: 0.5rem 0;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+.title{
+  display: inline-block;
+  font-family: 'Poppins', cursive;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 1.6em;
+  width: 100%;
+  color:#27ae60;
+}
+
+.boton1{
+  margin: .5rem;
+  background:var(--orange);
+  border-radius: 30px;
+  color:#fff;
+  padding:.8rem 1rem;
+  border:.2rem solid var(--orange);
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.boton1:hover{
+  background:#fff ;
+  border-color: var(--orange) ;
+  color:var(--orange) ;
+  font-weight: bold;
+  transition: 0.3s ease-in-out all;
 }
 
 .container_cate{
@@ -8,7 +104,7 @@
     margin-top: 35mm;
 }
 
-.get_in_touch{
+/*.get_in_touch{
     max-width: 500px;
     margin: 50px auto;
     position: relative;
@@ -21,7 +117,7 @@
 }
 .cont_boton{
     width: 100%;
-    /*background: blueviolet;*/
+    background: blueviolet;
     padding: 15px;
     text-align: center;
 }
@@ -35,7 +131,7 @@
 .boton:hover{
     background: #7C83FD;
     color: cornsilk;
-}
+}*/
 
 /*TABLA*/
 table{
@@ -82,5 +178,17 @@ table{
     }
     100%{
       background-position: 0% 50%;
+    }
+  }
+
+  @media (max-width:1192px){
+    .contformulario .row .image img{
+      display: none;
+    }
+  }
+
+  @media (max-width:775px){
+    .contformulario .row form{
+      margin: 2rem;
     }
   }
