--- a/web/assets/css/cuestionario_formu.css
+++ b/web/assets/css/cuestionario_formu.css
@@ -1,218 +1,224 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
 body{
-  font-size: 10px;
-  margin: 0%;
-  padding: 0%;
-  background: #f7f7f7;
+    font-size: 10px;
+    margin: 0%;
+    padding: 0%;
+    background: #f7f7f7;
 }
 .cont{
-  padding: 0% 30% ;
+    padding: 0% 30% ;
 }
 .formu{
-  height: 700px;
-  border: 2px solid #d1d3fc;
+    height: 700px;
+    border: 2px solid #d1d3fc;
 }
 .formu h3{
-  background: #7C83FD;
-  padding: 4%;
-  text-align: center;
-  font-size: 20px;
-  box-sizing: border-box;
+    background: #7C83FD;
+    padding: 4%;
+    text-align: center;
+    font-size: 20px;
+    box-sizing: border-box;
 }
 .formu form{
-  padding: 5% 10%;
+    padding: 5% 10%;
 }
 
 .formu input{
-  width: 100%;
-  outline: none;
-  border: 1px solid gray;
-  border-radius: 5px;
-  font-size: 20px;
-  padding: 5px 15px;
-  color: #5a95b1;
+    width: 100%;
+    outline: none;
+    border: 1px solid gray;
+    border-radius: 5px;
+    font-size: 20px;
+    padding: 5px 15px;
+    color: #5a95b1;
 }
 
 .boton{
-  padding: 5%;
-  text-align: center;
+    padding: 5%;
+    text-align: center;
 }
 
 .boton button{
-  border: 1px solid #7C83FD;
-  border-radius: 15px;
-  padding: 5px 15px;
-  color: #7C83FD;
-  background: none;
+    border: 1px solid #7C83FD;
+    border-radius: 15px;
+    padding: 5px 15px;
+    color: #7C83FD;
+    background: none;
 }
 
 .boton button:hover{
-  background:  #7C83FD;
-  border: 1px solid #7C83FD;
-  color: bisque;
+    background:  #7C83FD;
+    border: 1px solid #7C83FD;
+    color: bisque;
 }
 
 /*listado de las preguntas*/
 .formu02{
-  padding: 10px 50px;
-  text-align: center;
-  font-size: 1.5em;
-  width: 100%;
+    padding: 10px 50px;
+    text-align: center;
+    font-size: 1.5em;
+    width: 100%;
 }
 
 /*codigo sidebar*/
 :root{
---orange:#9494fc ;
+  --orange:#9494fc ;
 }
 
 .cont_formular{
-  width: 100%;
-  height: auto;
-  padding: 15px;
+    width: 100%;
+    height: auto;
+    padding: 15px;
 }
 
 .container-contformulario{
-font-family: 'Nunito', sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
 
 .boton1{
-display: inline-block;
-margin-top: 1rem;
-background:var(--orange);
-color:#fff;
-padding:.8rem 3rem;
-border:.2rem solid var(--orange);
-cursor: pointer;
-font-size: 1rem;
-width: 100%;
+  display: inline-block;
+  margin-top: 1rem;
+  background:var(--orange);
+  color:#fff;
+  padding:.8rem 3rem;
+  border:.2rem solid var(--orange);
+  cursor: pointer;
+  font-size: 1rem;
+  width: 100%;
 }
 
 .boton1:hover{
-background:#d6d6fd ;
-border-color: #d6d6fd ;
-color:#a9a9af ;
-font-weight: bold;
-transition: 0.3s ease-in-out all;
-}
-
-.contformulario .row{
-display: flex;
-flex-wrap: wrap;
-gap:1.5rem;
-align-items: center;
-margin: 0 1rem;
-}
-
-.contformulario .row .image{
-flex:1 1 25rem;
-}
-
-.contformulario .row .image2{
-flex:1 1 25rem;
-}
-
-.contformulario .row .image2 img{
-width:100%;
-}
-
-.contformulario .row .image img{
-width:100%;
-}
-
-.contformulario .row form{
-flex:1 1 25rem;
-padding:2rem;
-box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
-border-radius: .5em;
-display: inline-block;
-grid-template-columns:auto auto;
-gap: 10px;
-}
-
-.contformulario .row form .inputBox{
-padding:.5rem 0;
-}
-
-.contformulario .row form .boton1{
-grid-column: 1 / 3;
-}
-
-.contformulario .row form .inputBox input, select, textarea{
-font-family: 'Nunito', sans-serif;
-width:100%;
-padding:.5rem 0 .5rem .5rem;
-border:.1rem solid rgba(0,0,0,.1);
-font-size: 1.6em;
-color:#333;
-text-transform: none;
-}
-.contformulario .row form .inputBox input:focus , select:focus, textarea:focus{
-border-color: #8494f4  ;
-outline: 0 none;
-box-shadow: 0 1px 1px rgba(229, 103, 23, 0.075)inset, 0 0 8px rgba(55, 0, 255, 0.6);
-}
-
-.contformulario .row form .inputBox h3{
-/*font-size: 1em;*/
-color:#666;
-margin: 0.5rem 0;
-font-weight: bold;
-}
-
-.title{
-  font-family: 'Satisfy', cursive;
-  font-size: 3em;
-  color: #27ae60;
-}
-
-.about .content {
-  -webkit-box-flex: 1;
-  -ms-flex: 1 1 30rem;
-  flex: 1 1 30rem;
-}
-
-.about .content span {
-  font-family: "Satisfy", cursive;
-  font-size: 3rem;
-  color: #27ae60;
-}
-
-.boton_personalizado{
-  display: inline-block;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  padding: 5px;
-  margin: 5px;
-  color: #ffffff;
-  border: none;
-  background: gray;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size:medium;
-}
-
-.boton_personalizado:hover{
-  background: black;
+  background:#d6d6fd ;
+  border-color: #d6d6fd ;
+  color:#a9a9af ;
+  font-weight: bold;
   transition: 0.3s ease-in-out all;
 }
 
-@media (max-width:967px){
-.contformulario .row .image img{
-  display: none;
+.contformulario .row{
+  display: flex;
+  flex-wrap: wrap;
+  gap:1.5rem;
+  align-items: center;
+  margin: 0 1rem;
 }
+
+.contformulario .row .image{
+  flex:1 1 25rem;
+}
+
+.contformulario .row .image2{
+  flex:1 1 25rem;
+}
+
+.contformulario .row .image2 img{
+  width:100%;
+}
+
+.contformulario .row .image img{
+  width:100%;
+}
+
+.contformulario .row form{
+  flex:1 1 25rem;
+  padding:2rem;
+  box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
+  border-radius: .5em;
+  display: inline-block;
+  grid-template-columns:auto auto;
+  gap: 10px;
+}
+
+.table{
+  font-size: 1.2rem;
+  font-family: 'Nunito', sans-serif;
+}
+
+.contformulario .row form .inputBox{
+  padding:.5rem 0;
+}
+
+.contformulario .row form .boton1{
+  grid-column: 1 / 3;
+}
+
+.contformulario .row form .inputBox input, select, textarea{
+  font-family: 'Nunito', sans-serif;
+  width:100%;
+  padding:.5rem 0 .5rem .5rem;
+  border:.1rem solid rgba(0,0,0,.1);
+  font-size: 1.6em;
+  color:#333;
+  text-transform: none;
+}
+.contformulario .row form .inputBox input:focus , select:focus, textarea:focus{
+  border-color: #8494f4  ;
+  outline: 0 none;
+  box-shadow: 0 1px 1px rgba(229, 103, 23, 0.075)inset, 0 0 8px rgba(55, 0, 255, 0.6);
+}
+
+.contformulario .row form .inputBox h3{
+  /*font-size: 1em;*/
+  color:#666;
+  margin: 0.5rem 0;
+  font-weight: bold;
+}
+
+.title{
+    font-family: 'Satisfy', cursive;
+    font-size: 3em;
+    color: #27ae60;
+}
+
+.about .content {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 30rem;
+    flex: 1 1 30rem;
+  }
+  
+  .about .content span {
+    font-family: "Satisfy", cursive;
+    font-size: 3rem;
+    color: #27ae60;
+  }
+
+  .boton_personalizado{
+    display: inline-block;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    padding: 5px;
+    margin: 5px;
+    color: #ffffff;
+    border: none;
+    background: gray;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size:medium;
+  }
+
+  .boton_personalizado:hover{
+    background: black;
+    transition: 0.3s ease-in-out all;
+  }
+
+@media (max-width:967px){
+  .contformulario .row .image img{
+    display: none;
+  }
 }
 @media (max-width:916px){
-.contformulario .row .image2 img{
-  display: none;
-}
+  .contformulario .row .image2 img{
+    display: none;
+  }
 }
 
 @media (max-width:580px){
-.contformulario .row form .inputBox input, select, textarea{
-  width:100%;
-}
-.contformulario .row form{
-  display: block;
-}
+  .contformulario .row form .inputBox input, select, textarea{
+    width:100%;
+  }
+  .contformulario .row form{
+    display: block;
+  }
 }
