Correccion del boton header y ajuste en detallecurso, Reymundez S

--- a/web/assets/css/styledetcurso.css
+++ b/web/assets/css/styledetcurso.css
@@ -1,14 +1,15 @@
 :root {
-    --main-bg-color: #e8f4f6 ;
+    --main-bg-color: 'assets/images/fondo1.png' ;
   }
 .bg-dark1{
-    background-color: var(--main-bg-color);
+    background: url('../images/fondo1.png');
+    background-size: cover;
 }
 .row {
   margin: 0 auto;
   max-width: 1600px;
 }
-.bg-dark .row .col-xl-4 .card .card-body .btn-outline-dark {
+.bg-dark1 .row .col-xl-4 .card .card-body .btn-outline-dark {
   width: 100%;
   border-radius: 0;
   padding: 0.5rem 0;
@@ -21,7 +22,7 @@
   font-weight: bold;
 }
 @media (max-width: 767px) {
-  .bg-dark .row .info-course-right {
+  .bg-dark1 .row .info-course-right {
     display: none;
   }
   /* .bg-light .row .info-course-left {
