--- a/web/assets/css/header.css
+++ b/web/assets/css/header.css
@@ -80,7 +80,7 @@ header {
   font-weight: 300;
 }
 
-.btn {
+header .btn {
   display: inline-block;
   padding: 0.5rem 1.3rem;
   font-size: 0.8rem;
@@ -92,14 +92,14 @@ header {
   text-transform: uppercase;
 }
 
-.btn.solid,
-.btn.transparent:hover {
+header.btn.solid,
+header.btn.transparent:hover {
   background-color: #7c83fd;
   color: #ffffff;
 }
 
-.btn.transparent,
-.btn.solid:hover {
+header.btn.transparent,
+header.btn.solid:hover {
   background-color: transparent;
   color: #7c83fd;
 }
