--- a/web/assets/css/cursos.css
+++ b/web/assets/css/cursos.css
@@ -1,311 +1,409 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500&display=swap");
 .container-fluid .row .col-12 .section-title-course {
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 24px;
-  text-transform: uppercase;
-  color: #7c83fd;
-  padding: 1rem 3rem 0.5rem 3rem;
-  width: 100%;
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    text-transform: uppercase;
+    color: #7c83fd;
+    padding: 1rem 3rem 0.5rem 3rem;
+    width: 100%;
 }
 
 .container-fluid .row .col-12 .section-title-course hr {
-  width: 100%;
-  border: 2px solid #99ccff;
-  margin: 0.5rem 0rem 1rem 0rem;
+    width: 100%;
+    border: 2px solid #99ccff;
+    margin: 0.5rem 0rem 1rem 0rem;
 }
 
 .container-fluid .row .col-12 .card {
-  max-width: 423px;
-  max-height: 179px;
-  margin: 0 auto;
-  margin-bottom: 2rem;
+    max-width: 423px;
+    max-height: 179px;
+    margin: 0 auto;
+    margin-bottom: 2rem;
 }
 
 .container-fluid .row .col-12 .card .col-5 .container-image {
-  width: 100%;
-  height: 179px;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  overflow: hidden;
+    width: 100%;
+    height: 179px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
 }
 
 .container-fluid .row .col-12 .card .col-5 .container-image img {
-  flex-shrink: 0;
-  max-height: 100%;
+    flex-shrink: 0;
+    max-height: 100%;
 }
 
 .container-fluid .row .col-12 .card .col-7 {
-  padding: 1rem;
+    padding: 1rem;
 }
 
 .container-fluid .row .col-12 .card .col-7 .container-title {
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 18px;
-  text-transform: uppercase;
-  color: #000000;
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    text-transform: uppercase;
+    color: #000000;
 }
 
 .container-fluid .row .col-12 .card .col-7 .container-title a {
-  font-size: 18px;
-  color: #4f52d6;
+    font-size: 18px;
+    color: #4f52d6;
 }
 
 .container-fluid .row .col-12 .card .col-7 .container-descrition {
-  font-family: "Inter", sans-serif;
-  font-weight: normal;
-  font-size: 16px;
-  color: #b4b4b4;
-  margin-top: 0.5rem;
-  padding-right: 3rem;
+    font-family: "Inter", sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    color: #b4b4b4;
+    margin-top: 0.5rem;
+    padding-right: 3rem;
 }
 
 .container-fluid .row .col-12 .card .col-7 .container-link {
-  font-family: "Inter", sans-serif;
-  font-weight: bold;
-  font-size: 16px;
-  color: #33c6e7;
-  margin-top: 1rem;
-  text-decoration: none;
+    font-family: "Inter", sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+    color: #33c6e7;
+    margin-top: 1rem;
+    text-decoration: none;
 }
 
 .container-fluid .row .col-12 .card .col-7 .container-link a {
-  text-decoration: none;
-  color: #33c6e7;
+    text-decoration: none;
+    color: #33c6e7;
 }
 
 @media (max-width: 1241px) {
-  .container-fluid .row .col-12 .card .col-7 .container-descrition {
-    font-size: 14px;
-    padding-right: 2rem;
-  }
-  .container-fluid .row .col-12 .card .col-7 .container-link {
-    font-size: 14px;
-  }
+    .container-fluid .row .col-12 .card .col-7 .container-descrition {
+        font-size: 14px;
+        padding-right: 2rem;
+    }
+    .container-fluid .row .col-12 .card .col-7 .container-link {
+        font-size: 14px;
+    }
 }
 
 @media (max-width: 1055px) {
-  .container-fluid .row .col-12 .card .col-7 {
-    padding: 1rem 0.5rem;
-  }
-  .container-fluid .row .col-12 .card .col-7 .container-descrition {
-    font-size: 13px;
-    padding-right: 1rem;
-  }
-  .container-fluid .row .col-12 .card .col-7 .container-link {
-    font-size: 13px;
-  }
+    .container-fluid .row .col-12 .card .col-7 {
+        padding: 1rem 0.5rem;
+    }
+    .container-fluid .row .col-12 .card .col-7 .container-descrition {
+        font-size: 13px;
+        padding-right: 1rem;
+    }
+    .container-fluid .row .col-12 .card .col-7 .container-link {
+        font-size: 13px;
+    }
 }
 
 @media (max-width: 930px) {
-  .container-fluid .row .col-12 .card .col-7 .container-descrition {
-    padding-right: 1.5rem;
-  }
+    .container-fluid .row .col-12 .card .col-7 .container-descrition {
+        padding-right: 1.5rem;
+    }
 }
 
 @media (max-width: 767px) {
-  .container-fluid .row .col-12 .card .col-7 .container-descrition {
-    font-size: 16px;
-    padding-right: 3rem;
-  }
-  .container-fluid .row .col-12 .card .col-7 .container-link {
-    font-size: 16px;
-  }
+    .container-fluid .row .col-12 .card .col-7 .container-descrition {
+        font-size: 16px;
+        padding-right: 3rem;
+    }
+    .container-fluid .row .col-12 .card .col-7 .container-link {
+        font-size: 16px;
+    }
 }
 
 @media (max-width: 440px) {
-  .container-fluid .row .col-12 .card .col-7 .container-descrition {
-    font-size: 14px;
-    padding-right: 4rem;
-  }
-  .container-fluid .row .col-12 .card .col-7 .container-link {
-    font-size: 14px;
-  }
+    .container-fluid .row .col-12 .card .col-7 .container-descrition {
+        font-size: 14px;
+        padding-right: 4rem;
+    }
+    .container-fluid .row .col-12 .card .col-7 .container-link {
+        font-size: 14px;
+    }
 }
 
 @media (max-width: 379px) {
-  .container-fluid .row .col-12 .card .col-7 .container-descrition {
-    font-size: 13px;
-    padding-right: 3rem;
-  }
-  .container-fluid .row .col-12 .card .col-7 .container-link {
-    font-size: 13px;
-  }
+    .container-fluid .row .col-12 .card .col-7 .container-descrition {
+        font-size: 13px;
+        padding-right: 3rem;
+    }
+    .container-fluid .row .col-12 .card .col-7 .container-link {
+        font-size: 13px;
+    }
 }
+
 
 /* cursos */
 
+
+/* 
 .container-fluid .row .section-title-courses {
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 24px;
-  text-transform: uppercase;
-  color: #7c83fd;
-  padding: 1rem 3.5rem;
-  width: 100%;
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    text-transform: uppercase;
+    color: #7c83fd;
+    padding: 1rem 3.5rem;
+    width: 100%;
 }
 
 .container-fluid .container-card-course .row {
-  /* background-color: #f8fafe; */
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  border-radius: 10px;
-}
+margin: 0;
+padding: 0;
+width: 100%;
+border-radius: 10px;
 
+}
 .container-fluid .container-card-course .row .card {
-  max-width: 275px;
-  max-height: 400px;
-  border-radius: 10px;
+    max-width: 275px;
+    max-height: 400px;
+    border-radius: 10px;
 }
-
 .container-fluid .container-card-course .row .card .container-card-image {
-  width: 100%;
-  height: 216px;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  border-radius: 10px 10px 0 0;
+    width: 100%;
+    height: 216px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    border-radius: 10px 10px 0 0;
 }
-
 .container-fluid .container-card-course .row .card .container-card-image img {
-  flex-shrink: 0;
-  min-height: 100%;
+    flex-shrink: 0;
+    min-height: 100%;
 }
-
 .container-fluid .container-card-course .row .card .container-card-title {
-  text-transform: uppercase;
-  color: #000000;
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 18px;
-  margin: 1rem auto 0;
+    text-transform: uppercase;
+    color: #000000;
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    margin: 1rem auto 0;
 }
-
 .container-fluid .container-card-course .row .card .container-card-description {
-  color: #b4b4b4;
-  font-family: "Inter", sans-serif;
-  font-size: 16px;
-  text-align: center;
+    color: #b4b4b4;
+    font-family: "Inter", sans-serif;
+    font-size: 16px;
+    text-align: center;
 }
-
 .container-fluid .container-card-course .row .card .container-card-link {
-  font-family: "Inter", sans-serif;
-  font-size: 16px;
-  text-align: center;
-  text-decoration: none;
-  text-align: left;
-  font-weight: bold;
-  padding: 1rem;
+    font-family: "Inter", sans-serif;
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+    text-align: left;
+    font-weight: bold;
+    padding: 1rem;
 }
-
 .container-fluid .container-card-course .row .card .container-card-link a {
-  color: #33c6e7;
-  margin-bottom: 1rem;
-  text-decoration: none;
+    color: #33c6e7;
+    margin-bottom: 1rem;
+    text-decoration: none;
 }
+*/
+
 
 /* BUTTON SEARCH */
+
 .container .input {
-  border: 1px solid #d5d7da;
-  outline: none;
-  color: #8b7d77;
-  background-color: #f7f9fa;
+    border: 1px solid #d5d7da;
+    outline: none;
+    color: #8b7d77;
+    background-color: #f7f9fa;
 }
+
 .search_wrap {
-  width: 100%;
+    width: 100%;
 }
+
 .search_wrap .search_box {
-  position: relative;
-  width: 100%;
-  height: 50px;
+    position: relative;
+    width: 100%;
+    height: 50px;
 }
+
 .search_wrap .search_box .input {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding: 10px 20px;
-  border-radius: 3px;
-  font-size: 18px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 10px 20px;
+    border-radius: 3px;
+    font-size: 18px;
 }
+
 .search_wrap .search_box .btn {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 50px;
-  height: 100%;
-  background: #99ccff;
-  z-index: 1;
-  cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50px;
+    height: 100%;
+    background: #99ccff;
+    z-index: 1;
+    cursor: pointer;
 }
+
 .search_wrap .search_box .btn:hover {
-  background: #7c83fd;
+    background: #7c83fd;
 }
+
 .search_wrap .search_box .btn.btn_common .fas {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #fff;
-  font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 20px;
 }
+
 .search_wrap.search_wrap_1 .search_box .btn {
-  right: 0;
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
+    right: 0;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
 }
+
 .search_wrap.search_wrap_1 .search_box .input,
 .search_wrap.search_wrap_3 .search_box .input {
-  padding-right: 80px;
+    padding-right: 80px;
 }
+
 .search_wrap.search_wrap_2 .search_box .btn {
-  left: 0;
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
+    left: 0;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
 }
+
 .search_wrap.search_wrap_2 .search_box .input,
 .search_wrap.search_wrap_4 .search_box .input {
-  padding-left: 80px;
+    padding-left: 80px;
 }
+
 .search_wrap.search_wrap_3 .search_box .input,
 .search_wrap.search_wrap_4 .search_box .input,
 .search_wrap.search_wrap_6 .search_box .input {
-  border-radius: 50px;
+    border-radius: 50px;
 }
+
 .search_wrap.search_wrap_3 .search_box .btn {
-  right: 0px;
-  border-radius: 50%;
+    right: 0px;
+    border-radius: 50%;
 }
+
 .search_wrap.search_wrap_4 .search_box .btn {
-  left: 0px;
-  border-radius: 50%;
+    left: 0px;
+    border-radius: 50%;
 }
+
 .search_wrap.search_wrap_6 .search_box .btn,
 .search_wrap.search_wrap_5 .search_box .btn {
-  width: 125px;
-  height: 45px;
-  top: 8px;
-  right: 5px;
-  border-radius: 3px;
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    width: 125px;
+    height: 45px;
+    top: 8px;
+    right: 5px;
+    border-radius: 3px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
 .search_wrap.search_wrap_6 .search_box .btn {
-  border-radius: 25px;
+    border-radius: 25px;
 }
+
 .search_wrap.search_wrap_5 .search_box .input,
 .search_wrap.search_wrap_6 .search_box .input {
-  padding-right: 145px;
+    padding-right: 145px;
 }
+
+
+/*codigo de cartillas*/
+
+.container-fluid .row .section-title-courses {
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    text-transform: uppercase;
+    color: #7c83fd;
+    padding: 1rem 3.5rem;
+    width: 100%;
+}
+
+.container-fluid .container-card-course .row {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+.container-fluid .container-card-course .row .col-12 {
+    padding: .8rem;
+}
+
+.container-fluid .container-card-course .row .col-12 .card {
+    max-width: 320px;
+    max-height: 400px;
+    border-radius: 0;
+    margin: 0 auto;
+    border: 1px solid lightgray;
+    text-align: justify;
+}
+
+.container-fluid .container-card-course .row .col-12 .card .container-card-image {
+    width: 100%;
+    height: 165px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.container-fluid .container-card-course .row .col-12 .card .container-card-image img {
+    flex-shrink: 0;
+    min-height: 100%;
+}
+
+.container-fluid .container-card-course .row .col-12 .card .container-card-title {
+    text-transform: uppercase;
+    color: dimgray;
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: .8rem;
+    padding: .5rem;
+}
+
+.container-fluid .container-card-course .row .col-12 .card .container-card-description {
+    color: gray;
+    font-family: "Inter", sans-serif;
+    font-size: .8rem;
+    padding: 0 .5rem;
+}
+
+.container-fluid .container-card-course .row .col-12 .card .container-card-link {
+    font-family: "Inter", sans-serif;
+    font-size: .8rem;
+    text-align: right;
+    text-decoration: none;
+    font-weight: bold;
+    padding: .5rem;
+}
+
+.container-fluid .container-card-course .row .col-12 .card .container-card-link a {
+    color: dimgray;
+    margin-bottom: 1rem;
+    text-decoration: none;
+}
+
+
+/*fin codigo de cartillas*/
