--- a/web/assets/css/cursos.css
+++ b/web/assets/css/cursos.css
@@ -370,6 +370,7 @@ border-radius: 10px;
 
 .container-fluid .container-card-course .row .col-12 .card .container-card-image img {
     min-height: 100%;
+    min-width: 100%;
 }
 
 .container-fluid .container-card-course .row .col-12 .card .container-card-title {
