--- a/web/assets/css/stylecuestionario.css
+++ b/web/assets/css/stylecuestionario.css
@@ -1,4 +1,3 @@
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
 *{
@@ -416,6 +415,19 @@ footer button.show{
     border: 1px solid #4F52D6;
     cursor: pointer;
     transition: all 0.3s ease;
+}
+
+.muestras{
+    width:70%;
+    margin: 30px auto;
+    border-radius: 10px;
+    font-weight: bolder;
+    border: 1px solid #4F52D6;
+    font-size: 20px;
+    color: #4F52D6;
+    border-color: #86b7fe;
+    box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 25%);
+    background-color: transparent;
 }
 
 
