--- a/web/assets/css/agretemas.css
+++ b/web/assets/css/agretemas.css
@@ -14,35 +14,6 @@ body {
     background: #F7F7F7;
 }
 
-.modal-content {
-    border: none;
-    margin: 0 auto;
-}
-
-.modal-header {
-    background-color: #4F52D6;
-    color: #fff;
-}
-
-.modal-title {
-    margin: 0 30% 0 34%;
-    font-family: 'Poppins', serif;
-}
-
-.modal-header .close {
-    color: #fff;
-}
-
-.cerrar-modal {
-    background-color: #4F52D6;
-    color: #fff;
-}
-
-.cerrar-modal:hover {
-    background-color: #fff;
-    color: #4F52D6;
-}
-
 :root {
     --orange: #4F52D6;
 }
@@ -75,7 +46,7 @@ body {
     grid-template-columns: auto auto auto auto;
     width: 100%;
     gap: 10px;
-    padding: .5rem 0;
+    padding-top: .5rem;
 }
 
 .boton1:hover {
@@ -115,14 +86,15 @@ body {
 .btn-modulos {
     width: 100%;
     border: 2px solid var(--orange);
-    background-color: #fff;
+    background-color: transparent;
     color: var(--orange);
+    font-size: .8rem;
 }
 
 .btn-modulos:hover {
     background-color: var(--orange);
     color: #fff;
-    border: 2px solid #fff;
+    border: 2px solid var(--orange);
     transition: 0.3s ease-in-out all;
 }
 
@@ -423,10 +395,10 @@ textarea {
 
 .container-fluid .container .seccion .row .col-9 form {
     background: whitesmoke;
-    padding: 3.1rem 1rem;
+    padding: 1rem 1rem 0.5rem 1rem;
     margin: 0 auto;
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 .container-fluid .container .seccion .row .col-9 .container {
@@ -489,13 +461,13 @@ textarea {
     transition: .7s;
 }
 
-.container-fluid .container .seccion .row .col-9 .form-row .btn-add {
+.btn-add {
     background: #4F52D6;
     color: #fff;
     border: 1px solid #4F52D6;
 }
 
-.container-fluid .container .seccion .row .col-9 .form-row .btn-add:hover {
+.btn-add:hover {
     background: #3c3ea5;
     color: white;
     border: 1px solid #3c3ea5;
